--- a/templates/output.html
+++ b/templates/output.html
@@ -20,7 +20,14 @@
       <h1 style="color: DodgerBlue">Tags Created!</h1>
       <!--p style = "color: black">Would you like to crate more tags?</p-->
       <body bgcolor="white">
-        <button type="submit" href = "/outputtable.html" style="background: blue; height: 45px; width: 200px; color: white; size: 5; font: oblique;">SEE TAGS</button>  
+        <button type="button" style="background: blue; height: 45px; width: 200px; color: white; size: 5; font: oblique;"
+        onclick = "displayTags()">SEE TAGS</button>
+        <script>
+          function displayTags(){
+            location.href = "/DisplayTags"
+          }
+        </script>
+
         <button type="button" style="background: blue; height: 45px; width: 200px; color: white; size: 5; font: oblique;"
         onclick = "createMoreTags()">CREATE MORE TAGS</button>
         <script>
