--- a/templates/index.html
+++ b/templates/index.html
@@ -37,7 +37,9 @@
     <button class="tablinks"
   onclick="openCity(event, 'tab3')">VFD Discrete</button>
     <button class="tablinks"
-  onclick="openCity(event, 'tab4')">Append CSV Files</button>
+  onclick="openCity(event, 'tab4')">Level Sensors</button>
+    <button class="tablinks"
+  onclick="openCity(event, 'tab5')">Append CSV Files</button>
   </div>
 
   <!--Tab Content-->
@@ -105,6 +107,27 @@
   </div>
 
   <div id="tab4" class="tabcontent">
+    <h3>Level Sensors</h3>
+    <p>Discrete: Stat On, Stat Off. Integer: Debounce On, Debounce Off.</p>
+    <center>
+    	<font color="black" size="4" style="font-family: avenir">
+    		<h1 style="color: DodgerBlue">Level Sensor Tags</h1>
+    		<!--body bgcolor="white"-->
+    			<form action="/LSTags" autocomplete="on" method = "POST" enctype="multipart/form-data">
+    		  		First Sensor:<br> <input type="number" name="first_sensor" ><br><br>
+    		  		Last Sensor:<br> <input type="number" name="last_sensor" ><br><br>
+    		  		Sensor Number:<br> <input type="number" name="sensor_number" ><br><br>
+    		  		Conveyor Type:<br> <input type="text" name="conveyor_type"><br><br>
+    		  		Line:<br> <input type="text" name="line"><br><br>
+
+    		  		<button type="submit" style="background: blue; height: 45px; width: 200px; color: white; size: 5; font: oblique;">CREATE TAGS</button>
+          </form>
+    		</body>
+    	</font>
+    </center>
+
+  </div>
+  <div id="tab5" class="tabcontent">
     <h3>Append CSV Files</h3>
     <p>This will combine all the created tags into a single csv file that you can DB load.</p>
 
